# amiitool

./: .gitignore  .gitmodules  CMakeLists.txt  LICENSE  Makefile  README.md  Toolchain-cross-mingw32-linux.cmake  amiibo.c  amiidecode.py  amiitool.c  build-cross-mingw32.sh  build.sh  drbg.c  portable_endian.h  util.c  util.h  version.c
configs/: mbedtls.h
include/: keygen.h
include/nfc3d/: amiibo.h  drbg.h  keygen.h  ninkeys.h  version.h
network/: DEPRECATED.md  amiicli.sh  amiisrv.sh  protocol.md
src/: amiibo.c  amiitool.c  drbg.c  keygen.c  nintest.c  util.c  util.h  zerotest.c
